--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.22",
+    "@iconify/vue": "^4.1.2",
+    "@vueuse/core": "^10.11.0",
+    "autoprefixer": "^10.4.19",
     "core-js": "^3.8.3",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
