--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@iconify/vue": "^4.1.2",
     "@vueuse/core": "^10.11.0",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
     "core-js": "^3.8.3",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
