--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
     "postcss": "^8.4.40",
+    "sweetalert2": "^11.12.3",
     "tailwindcss": "^3.4.7",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
